--- a/Teht_4/Teht_4.csproj
+++ b/Teht_4/Teht_4.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01C3B090-98D7-4887-B672-4978EEEB9BC7}</ProjectGuid>
+    <ProjectGuid>{4A917D9B-30B3-44CA-B2AA-AAFC68661F0A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Teht_3</RootNamespace>
-    <AssemblyName>Teht_3</AssemblyName>
+    <RootNamespace>Teht_4</RootNamespace>
+    <AssemblyName>Teht_4</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Boss.cs" />
-    <Compile Include="Employee.cs" />
+    <Compile Include="Bicycle.cs" />
+    <Compile Include="Boat.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
